--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.5.2",
     "lodash": "^4.17.19",
+    "material-ui-responsive-menu": "^1.19.3",
     "moment": "^2.27.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-moment": "^0.9.7",
+    "react-responsive-animate-navbar": "^1.1.8",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
   },
