--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lodash": "^4.17.19",
     "material-ui-responsive-menu": "^1.19.3",
     "moment": "^2.27.0",
+    "oidc-client": "^1.10.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
