--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-moment": "^0.9.7",
     "react-responsive-animate-navbar": "^1.1.8",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-table": "^7.6.1"
   },
   "scripts": {
     "start": "react-scripts start",
